--- a/app/views/curation_concerns/items/_list_helper.html.slim
+++ b/app/views/curation_concerns/items/_list_helper.html.slim
@@ -3,10 +3,10 @@
     .form-group
       label Users
       textarea.form-control name="#{permission}_users" rows="5"
-        = decomma(@item.send("#{permission}_users_string"))
+        = decomma(@item.send("#{permission}_users"))
 
   .col-md-6
     .form-group
       label Groups
       textarea.form-control name="#{permission}_groups" rows="5"
-        = de
+        = decomma(@item.send("#{permission}_groups"))
